--- a/index.html
+++ b/index.html
@@ -7,8 +7,59 @@
 </head>
 
 <body>
-  <h1>ABU SAIKH OSSIULLAH</h1>
+  <Center>
+    <h1>Automation Tester</h1>
+  </Center>
+  <hr>
+  <table cellspacing="5">
+    <tr>
+      <td><img class="Profile-Pic" src="Profile_Pic.jpg" alt="Profile Photo" height="200" width="300"></td>
+      <td>
+        <h2>ABU SAIKH OSSIULLAH</h2>
+        <h3>abusaikh@gmail.com</h3>
+        <h3>+91-9831269544</h3>
+      </td>
+    </tr>
+  </table>
+  <hr>
+  <section>
+    <h2>SUMMARY OF SKILLS</h2>
+    <ul>
+      <li>Automation Test Planning, Script Development, Script Maintenance and achieving organizational /growth objectives.
+        Proven achievements in IT industry across a career spanning over 7 years as an automation tester using <em>Selenium WebDriver</em>
+        and <em>Rest Assured API testing</em>.
+      </li>
+      <li>Good Knowledge in testing framework like <em>TestNG, Cucumber, Fitnesse</em>.</li>
+    </ul>
+  </section>
+  <hr>
+  <section>
+    <h2>SKILL SET</h2>
+    <table border="1" cellspacing="1">
+      <thead>
+        <tr>
+          <th scope="col">SKILL SET</th>
+          <th scope="col">SKILL NAME</th>
+        </tr>
+      </thead>
+      <tbody >
+        <tr>
+          <th>Tools</th>
+          <td>Selenium WebDriver, TestNG, Cucumber</td>
+        </tr>
+        <tr>
+          <th>Test Management Tools</th>
+          <td>HP Quality center, Jira Defect Management tool</td>
+        </tr>
+        <tr>
+          <th>Languages</th>
+          <td>Java, HTML5, CSS, Java Script</td>
+        </tr>
 
+      </tbody>
+    </table>
+  </section>
+  <hr>
 </body>
 
 </html>
